# FSAdaptor

./: README.md  bugs  libfsadaptor.pc.in
test/: CMakeLists.txt  TestMain.cpp
test/Path/: ConcatenatingTest.cpp  DiscoveredDefects.cpp  IteratorTest.cpp  OperatorTests.cpp  ParsingTest.cpp  UnixAbsolutePathTest.cpp  UnixAbsolutePathTest.h  UnixHiddenFilePathTest.cpp  UnixHiddenFilePathTest.h  UnixNoExtensionPathTest.cpp  UnixNoExtensionPathTest.h  UnixRelativeCurrentPathTest.cpp  UnixRelativeCurrentPathTest.h  UnixRelativeParentPathTest.cpp  UnixRelativeParentPathTest.h
test/Scripts/: absolute.sh  createDirectories.sh  createDirectory.sh  currentPath.sh  equivalent.sh  exists.sh  isDirectory.sh  isEmpty.sh  remove.sh  rename.sh  walk.sh
test/StandardFilesystemAdaptor/: absolute.cpp  createDirectories.cpp  createDirectory.cpp  currentPath.cpp  equivalent.cpp  exists.cpp  isDirectory.cpp  isEmpty.cpp  remove.cpp  rename.cpp  walk.cpp
